--- a/src/pages/price-list/refrigerator-repair-cost.astro
+++ b/src/pages/price-list/refrigerator-repair-cost.astro
@@ -337,146 +337,39 @@ import "css/price/style_price.css";
             </div>
           </div>
 
-          <!-- <div class="head-prices">
-          <h2>Oven Repair Cost - Labor Only Excluding Parts</h2>
-          <p>
-            Here are common problems and associated costs for water heater
-            repair in Los Angeles:
-          </p>
-        </div> -->
           <div class="full-content_job-prices">
             <div class="content_job-prices" id="col-prices">
               <div class="desk_job-prices">
                 <a href="#"
                   ><p>
-                    Faulty Heating Element replacement cost (Electric Oven).
+                    The compressor is the heart of your refrigerator's cooling
+                    system. A failing compressor is a significant issue and one
+                    of the most expensive repairs.
                   </p></a
                 >
-                <p>Oven not heating, uneven cooking, or element not glowing.</p>
-              </div>
-
-              <div class="money_job-prices">
-                <p>100 - 250$</p>
-              </div>
-            </div>
-
-            <div class="content_job-prices">
-              <div class="desk_job-prices">
-                <a href="#"><p>Oven Thermostat Issues replacement cost.</p></a>
-                <p>Oven over or under heating, temperature fluctuation.</p>
-              </div>
-
-              <div class="money_job-prices">
-                <p>100 - 250$</p>
-              </div>
-            </div>
-
-            <div class="content_job-prices" id="col-prices">
-              <div class="desk_job-prices">
-                <a href="#"
-                  ><p>Igniter Problems replacement cost (Gas Oven).</p></a
-                >
                 <p>
-                  Oven not heating, igniter glowing but no flame, slow to heat.
+                  The refrigerator is not cooling, making unusual or excessive
+                  noise, or starting and stopping frequently.
                 </p>
               </div>
 
               <div class="money_job-prices">
-                <p>150 - 350$</p>
+                <p>600 - 1200$</p>
               </div>
             </div>
 
             <div class="content_job-prices">
               <div class="desk_job-prices">
                 <a href="#"
-                  ><p>Gas Valve Malfunction replacement cost(Gas Oven)</p></a
-                >
-                <p>Oven not heating despite active igniter, smell of gas.</p>
-              </div>
-
-              <div class="money_job-prices">
-                <p>150 - 400$</p>
-              </div>
-            </div>
-
-            <div class="content_job-prices" id="col-prices">
-              <div class="desk_job-prices">
-                <a href="#"><p>Oven Hinge replacement cost.</p></a>
-                <p>
-                  Door not closing properly, heat escaping during cooking. Hinge
-                  replacement.
-                </p>
-              </div>
-
-              <div class="money_job-prices">
-                <p>100 - 200$</p>
-              </div>
-            </div>
-
-            <div class="content_job-prices">
-              <div class="desk_job-prices">
-                <a href="#"><p>Oven Seal replacement cost.</p></a>
-                <p>
-                  Door not closing properly, heat escaping during cooking. Seal
-                  replacemen.
-                </p>
-              </div>
-
-              <div class="money_job-prices">
-                <p>50 - 150$</p>
-              </div>
-            </div>
-
-            <div class="content_job-prices" id="col-prices">
-              <div class="desk_job-prices">
-                <a href="#"><p>Control Board Malfunction replacement cost</p></a
+                  ><p>
+                    The thermostat controls the temperature inside the
+                    refrigerator. If it fails, it might not trigger the cooling
+                    process effectively.
+                  </p></a
                 >
                 <p>
-                  Oven not responding to controls, display errors or oven
-                  turning off unexpectedly.
-                </p>
-              </div>
-
-              <div class="money_job-prices">
-                <p>250- 400$</p>
-              </div>
-            </div>
-
-            <div class="content_job-prices">
-              <div class="desk_job-prices">
-                <a href="#"
-                  ><p>Oven Broken Interior Light replacement cost.</p></a
-                >
-                <p>Light not functioning when oven door is opened.</p>
-              </div>
-
-              <div class="money_job-prices">
-                <p>50 - 100$</p>
-              </div>
-            </div>
-
-            <div class="content_job-prices" id="col-prices">
-              <div class="desk_job-prices">
-                <a href="#"
-                  ><p>Oven Convection Fan Problems replacement costs.</p></a
-                >
-                <p>
-                  Fan noisy or not turning, uneven cooking in convection mode.
-                </p>
-              </div>
-
-              <div class="money_job-prices">
-                <p>100 - 250$</p>
-              </div>
-            </div>
-
-            <div class="content_job-prices">
-              <div class="desk_job-prices">
-                <a href="#"
-                  ><p>Oven Self-Cleaning Latch Problems repair cost.</p></a
-                >
-                <p>
-                  Oven door not locking or unlocking after self-cleaning cycle.
+                  Fridge or freezer section is too warm or too cold, temperature
+                  fluctuations.
                 </p>
               </div>
 
@@ -489,12 +382,54 @@ import "css/price/style_price.css";
               <div class="desk_job-prices">
                 <a href="#"
                   ><p>
-                    Oven Baking or Broiler Element Failure (Electric Oven)
-                    repair cost.
+                    The evaporator fan circulates cold air from the freezer to
+                    the fridge compartment. If this fan fails, the fridge may
+                    not cool adequately.
                   </p></a
                 >
                 <p>
-                  No heat from the bottom (baking) or top (broiling) elements.
+                  Poor cooling in the fridge section but freezer works fine,
+                  noisy operation.
+                </p>
+              </div>
+
+              <div class="money_job-prices">
+                <p>100 - 250$</p>
+              </div>
+            </div>
+
+            <div class="content_job-prices">
+              <div class="desk_job-prices">
+                <a href="#"
+                  ><p>
+                    The condenser fan cools the compressor and condenser coils.
+                    If it's not working, the fridge can overheat or stop
+                    cooling.
+                  </p></a
+                >
+                <p>
+                  Refrigerator overheating, loud noise from the refrigerator
+                  back.
+                </p>
+              </div>
+
+              <div class="money_job-prices">
+                <p>100 - 250$</p>
+              </div>
+            </div>
+
+            <div class="content_job-prices" id="col-prices">
+              <div class="desk_job-prices">
+                <a href="#"
+                  ><p>
+                    The defrost heater prevents frost from accumulating in the
+                    freezer. Failure can lead to a build-up of ice and affect
+                    cooling.
+                  </p></a
+                >
+                <p>
+                  Frost buildup in the freezer, freezer works but fridge section
+                  is warm.
                 </p>
               </div>
 
@@ -506,65 +441,54 @@ import "css/price/style_price.css";
             <div class="content_job-prices">
               <div class="desk_job-prices">
                 <a href="#"
-                  ><p>Oven Temperature Sensor Failure repair cost.</p></a
+                  ><p>
+                    A damaged door seal can allow cool air to escape, making
+                    your fridge work harder and increasing energy consumption.
+                  </p></a
                 >
                 <p>
-                  Inaccurate oven temperature, oven cuts off, or fails to heat
-                  properly.
+                  Condensation or frost buildup near the door, energy waste.
                 </p>
-              </div>
-
-              <div class="money_job-prices">
-                <p>100 - 200$</p>
-              </div>
-            </div>
-
-            <div class="content_job-prices" id="col-prices">
-              <div class="desk_job-prices">
-                <a href="#"><p>Oven Timer or Clock repair cost.</p></a>
-                <p>Timer or clock not advancing or functioning properly.</p>
-              </div>
-
-              <div class="money_job-prices">
-                <p>100 - 300$</p>
-              </div>
-            </div>
-
-            <div class="content_job-prices">
-              <div class="desk_job-prices">
-                <a href="#"><p>Oven Ventilation Problems repair cost.</p></a>
-                <p>
-                  Excessive heat around the oven exterior, steam or smoke not
-                  venting properly.
-                </p>
-              </div>
-
-              <div class="money_job-prices">
-                <p>100 - 250$</p>
-              </div>
-            </div>
-
-            <div class="content_job-prices" id="col-prices">
-              <div class="desk_job-prices">
-                <a href="#"><p>Oven Wiring Issues repair cost</p></a>
-                <p>
-                  Partial heating, flickering lights, or electrical tripping.
-                </p>
-              </div>
-
-              <div class="money_job-prices">
-                <p>150 - 400$</p>
-              </div>
-            </div>
-
-            <div class="content_job-prices">
-              <div class="desk_job-prices">
-                <a href="#"><p>Oven Rack replacement costs. Per rack.</p></a>
-                <p>Racks bent, corroded, or not sliding smoothly.</p>
               </div>
 
               <div class="money_job-prices">
                 <p>85 - 150$</p>
+              </div>
+            </div>
+
+            <div class="content_job-prices" id="col-prices">
+              <div class="desk_job-prices">
+                <a href="#"
+                  ><p>
+                    This valve opens to supply water to the refrigerator's ice
+                    maker and dispenser. If it fails, these features won't work.
+                  </p></a
+                >
+                <p>Ice maker not making ice, water dispenser not working.</p>
+              </div>
+
+              <div class="money_job-prices">
+                <p>85 - 150$</p>
+              </div>
+            </div>
+
+            <div class="content_job-prices">
+              <div class="desk_job-prices">
+                <a href="#"
+                  ><p>
+                    The control board is the refrigerator's brain, directing
+                    electrical power to various components. Malfunctions here
+                    can affect many aspects of operation.
+                  </p></a
+                >
+                <p>
+                  The fridge is not running cycles properly, and the erratic
+                  behavior of the fridge functions.
+                </p>
+              </div>
+
+              <div class="money_job-prices">
+                <p>200 - 400$</p>
               </div>
             </div>
           </div>
@@ -574,30 +498,23 @@ import "css/price/style_price.css";
         <div class="job-prices" id="parts-cost-anchor">
           <div class="head_pricing-policy head_pricing-policy_foto">
             <div class="head_pricing-policy_foto-a">
-              <h2>Our Pricing Policy For The Oven Repair And How We Work</h2>
+              <h2>Refrigerator Replacement Parts Cost.</h2>
               <p>
-                There are four costs to consider when it comes to making your
-                oven work optimally.
+                The cost of replacement parts may vary depending on the
+                refrigerator. The specific part, make and model. Here is an
+                approximate range for some parts.
               </p>
             </div>
 
             <div class="head_pricing-policy_foto-b">
               <img
-                width="600px"
+                width="500px"
                 height="500px"
-                src="/img-price/oven-repair-cost/oven-replacement-parts-cost-4.webp"
-                alt="Oven replacement parts cost"
+                src="/img-price/refrigerator-repair-cost/refrigerator-repair-maintenance-cost-4.webp"
+                alt="refrigerator repair maintenance cost"
               />
             </div>
           </div>
-
-          <!-- <div class="head-prices">
-          <h2>Oven Replacement Parts Cost</h2>
-          <p>
-            The cost of replacement parts may vary depending on your model. Here
-            is an approximate range of prices:
-          </p>
-        </div> -->
 
           <div class="content_job-prices" id="col-prices">
             <div class="desk_job-prices">
