--- a/src/pages/price-list/refrigerator-repair-cost.astro
+++ b/src/pages/price-list/refrigerator-repair-cost.astro
@@ -518,55 +518,68 @@ import "css/price/style_price.css";
 
           <div class="content_job-prices" id="col-prices">
             <div class="desk_job-prices">
-              <a href="#"><p>Oven Heating Element cost.</p></a>
-              <p>
-                Heating elements can fail due to burnout or physical damage, and
-                they are among the more commonly replaced parts in electric
-                ovens.
-              </p>
+              <a href="#"><p>Compressor.</p></a>
             </div>
 
             <div class="money_job-prices">
-              <p>20 - 10$</p>
+              <p>500 - 1000$</p>
             </div>
           </div>
 
           <div class="content_job-prices">
             <div class="desk_job-prices">
-              <a href="#"><p>Oven Igniter replacement cost (Gas Oven).</p></a>
-              <p>
-                The igniter is critical for starting the burner in a gas oven.
-                It can weaken over time and require replacement.
-              </p>
+              <a href="#"><p>Control board.</p></a>
             </div>
 
             <div class="money_job-prices">
-              <p>30 - 250$</p>
+              <p>500 - 1000$</p>
             </div>
           </div>
 
           <div class="content_job-prices" id="col-prices">
             <div class="desk_job-prices">
-              <a href="#"><p>Oven Control Board cost.</p></a>
-              <p>
-                The control panel governs the oven's heating functions and
-                timers. Malfunctions here can affect many aspects of oven
-                operation.
-              </p>
+              <a href="#"><p>Thermostat.</p></a>
             </div>
 
             <div class="money_job-prices">
-              <p>100 - 400$</p>
+              <p>100 - 440$</p>
             </div>
           </div>
 
           <div class="content_job-prices">
             <div class="desk_job-prices">
-              <a href="#"><p>Oven Thermostat cost.</p></a>
+              <a href="#"><p>Defrost motor.</p></a>
+            </div>
+
+            <div class="money_job-prices">
+              <p>100 - 440$</p>
+            </div>
+          </div>
+
+          <div class="content_job-prices" id="col-prices">
+            <div class="desk_job-prices">
+              <a href="#"><p>Coils.</p></a>
               <p>
-                A faulty thermostat that doesn’t accurately detect and control
-                temperature can lead to over or under-cooked food.
-              </p>
+            </div>
+
+            <div class="money_job-prices">
+              <p>100 - 440$</p>
+            </div>
+          </div>
+
+          <div class="content_job-prices">
+            <div class="desk_job-prices">
+              <a href="#"><p>Door seal.</p></a>
+            </div>
+
+            <div class="money_job-prices">
+              <p>40 - 440$</p>
+            </div>
+          </div>
+
+          <div class="content_job-prices" id="col-prices">
+            <div class="desk_job-prices">
+              <a href="#"><p>Drip pan.</p></a>
             </div>
 
             <div class="money_job-prices">
@@ -574,120 +587,16 @@ import "css/price/style_price.css";
             </div>
           </div>
 
-          <div class="content_job-prices" id="col-prices">
-            <div class="desk_job-prices">
-              <a href="#"><p>Oven Temperature Sensor cost.</p></a>
-              <p>
-                Similar to the thermostat, the sensor monitors the oven’s
-                internal temperature, and discrepancies can affect cooking
-                performance.
-              </p>
-            </div>
-
-            <div class="money_job-prices">
-              <p>20 - 150$</p>
-            </div>
-          </div>
-
           <div class="content_job-prices">
             <div class="desk_job-prices">
-              <a href="#"><p>Door Gasket.</p></a>
-              <p>
-                The gasket seals the oven door to prevent heat from escaping. A
-                worn gasket can lead to inefficient oven operation and increased
-                energy costs.
-              </p>
+              <a href="#"><p>Ice maker</p></a>
             </div>
 
             <div class="money_job-prices">
-              <p>10 - 80$</p>
+              <p>60 - 330$</p>
             </div>
           </div>
 
-          <div class="content_job-prices" id="col-prices">
-            <div class="desk_job-prices">
-              <a href="#"><p>Oven Gas Safety Valve cost.</p></a>
-              <p>
-                In gas ovens, the safety valve controls the flow of gas to the
-                burner; a failure can prevent the oven from heating.
-              </p>
-            </div>
-
-            <div class="money_job-prices">
-              <p>100 - 300$</p>
-            </div>
-          </div>
-
-          <div class="content_job-prices">
-            <div class="desk_job-prices">
-              <a href="#"><p>Oven Bake or Broil Elements (Gas Oven) cost.</p></a
-              >
-              <p>
-                These elements are used in baking and broiling and can wear out
-                or malfunction, requiring replacement.
-              </p>
-            </div>
-
-            <div class="money_job-prices">
-              <p>25 - 200$</p>
-            </div>
-          </div>
-
-          <div class="content_job-prices" id="col-prices">
-            <div class="desk_job-prices">
-              <a href="#"><p>Oven Fan Motor (Convection Oven) cost.</p></a>
-              <p>
-                The fan motor circulates air in convection ovens. A
-                malfunctioning fan motor can result in uneven cooking.
-              </p>
-            </div>
-
-            <div class="money_job-prices">
-              <p>100 - 250$</p>
-            </div>
-          </div>
-
-          <div class="content_job-prices">
-            <div class="desk_job-prices">
-              <a href="#"><p>Oven Rack cost.</p></a>
-              <p>
-                Racks can become warped or damaged over time and may need
-                replacing for safety and usability.
-              </p>
-            </div>
-
-            <div class="money_job-prices">
-              <p>20 - 100$</p>
-            </div>
-          </div>
-
-          <div class="content_job-prices" id="col-prices">
-            <div class="desk_job-prices">
-              <a href="#"><p>Oven Door Hinge cost.</p></a>
-              <p>
-                Faulty hinges can prevent the oven door from closing properly,
-                affecting the oven’s ability to maintain temperature.
-              </p>
-            </div>
-
-            <div class="money_job-prices">
-              <p>30 - 100$</p>
-            </div>
-          </div>
-
-          <div class="content_job-prices">
-            <div class="desk_job-prices">
-              <a href="#"><p>Oven Light Bulb cost.</p></a>
-              <p>
-                While minor, a non-functioning light bulb needs replacement for
-                visibility and convenience.
-              </p>
-            </div>
-
-            <div class="money_job-prices">
-              <p>4 - 20$</p>
-            </div>
-          </div>
 
           <div class="pros_job-prices">
             <p>
@@ -702,34 +611,28 @@ import "css/price/style_price.css";
               specialized knowledge and safety assurance that professional
               Technicians provide.
             </p>
+            <p>The total cost of a refrigerator repair in Los Angeles can vary significantly depending on the specific issue, the brand and model of the refrigerator. Call us today.</p>
           </div>
         </div>
         <Btn />
 
         <div class="maintenance">
           <div class="head_pricing-policy head_pricing-policy_foto">
-            <div class="head_pricing-policy_foto-b">
-              <img
-                width="600px"
-                height="500px"
-                src="/img-price/oven-repair-cost/ways-to-save-money-on-oven-repair-5.webp"
-                alt="ways to save money on oven repair"
-              />
-            </div>
+             <div class="head_pricing-policy_foto-b">
+                <img
+                  width="600px"
+                  height="500px"
+                  src="/img-price/refrigerator-repair-cost/refrigerator-repair-cost-near-me-5.webp"
+                  alt="Refrigerator repair cost near me"
+                />
+              </div>
 
             <div class="head_pricing-policy_foto-a">
-              <h2>Our Pricing Policy For The Oven Repair And How We Work</h2>
-              <p>
-                There are four costs to consider when it comes to making your
-                oven work optimally.
-              </p>
+              <h2>Ways to Save Money on Refrigerator Repair</h2>
             </div>
           </div>
 
-          <!-- <div class="head-maintenance">
-          <h2>Ways to Save Money on Oven Repair</h2>
-        </div> -->
-
+        
           <div class="description_maintenance">
             <div class="conclusion-description_maintenance">
               <div class="head_description_maintenance">
@@ -799,18 +702,10 @@ import "css/price/style_price.css";
               </div>
 
               <p>
-                - Timely maintenance can save you from spending money on
-                unnecessary oven repairs. It increases the longevity of your
-                oven. We charge a flat fee of $80 for the oven maintenance
-                service.
+                - Timely maintenance can save you money on unnecessary fridge repairs and increase your appliance's longevity. We charge a flat fee of $80 for the refrigerator maintenance service.
               </p>
               <p>
-                - Oven maintenance includes visual inspection, professional
-                cleaning of the interior, vent, fan, and burner/heating element,
-                checking and testing of controls and functions, component check,
-                calibrating the oven if necessary, seal and gasket check, and
-                overall safety assessment. Timely maintenance helps to increase
-                the oven's longevity and prevents potential damage
+                - Refrigerator maintenance includes thoroughly cleaning the condenser coils, inspecting door seals for tightness, and checking the temperature calibration to ensure proper cooling. Timely maintenance helps to increase the fridge's longevity and prevents potential damage.
               </p>
             </div>
           </div>
