--- a/src/components/btn.astro
+++ b/src/components/btn.astro
@@ -40,11 +40,11 @@ import "components/css-components/style-btn.css";
   </div>
 
   <div class="button-book-global">
-    <button
+   <button
       data-token="9e68ce292ba246dbba0fe928b98791f7"
       data-orgname="Same-Day-Appliance-Repair"
       onClick="HCPWidget.openModal()">
-      Book
+      Book Now!
     </button>
     <!-- class="hcp-button" -->
 
@@ -56,6 +56,6 @@ import "components/css-components/style-btn.css";
   </div>
 
   <div class="button-call-global">
-    <a href="tel:+14243250520">Call: (424) 325-0520</a>
+    <a href="tel:+14243250520">(424) 325-0520</a>
   </div>
 </div>
