--- a/src/components/css-components/style-btn.css
+++ b/src/components/css-components/style-btn.css
@@ -26,7 +26,7 @@
   display: inline-block;
   width: 50px;
   margin: 0 10px 0 0;
-  background-color: #0f77cc;
+  background-color: #090909;
   border-radius: 7px;
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
 }
@@ -65,7 +65,7 @@
   display: inline-block;
   align-self: center;
   margin: 0 10px 0 0;
-  width: 94px;
+  width: 150px;
 }
 
 .button-book-global button {
@@ -76,7 +76,7 @@
   box-shadow: none;
   border-radius: 100px;
   color: #fff;
-  background-color: #0f77cc;
+  background-color: #ca0913;
   text-transform: uppercase;
   position: relative;
   border: 0;
@@ -107,24 +107,19 @@
 
 
 
-
-
-
-
-
-
 .button-call-global {
   /* display: inline-block; */
   display: grid;
   width: 180px;
-  background-color: #0f77cc;
+  background-color: #ca0913;
   box-shadow: inset 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
   border-radius: 7px;
   align-self: center;
+  font-weight:;
 }
 
 .button-call-global a {
-  padding: 14px 8px;
+  padding: 10px 8px;
   width: 180px !important;
   align-self: center;
   color: #fff;
