--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -51,6 +51,8 @@ const menuitems = [
     children: [
     { title: "Dryer Repair Cost", path: "/price-list/dryer-repair-cost" },
     { title: "Dishwasher Repair Cost", path: "/price-list/dishwasher-repair-cost" },  
+    { title: "Dishwasher Repair Cost", path: "/price-list/oven-repair-cost" },  
+    { title: "Dishwasher Repair Cost", path: "/price-list/refrigerator-repair-cost" },  
     ],
   },
   {
