--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -5,7 +5,7 @@ import Link from "@components/ui/link.astro";
 import { Icon } from "astro-icon";
 ---
 <h1><span class="animate-charcter">
-  Same Day</span> Appliance Repair
+  Same Day Appliance Repair</span> 
 </h1>
 <main class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
   <div class="py-6 md:order-1 md:block">
