--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -67,8 +67,8 @@ const menuitems = [
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
         <a href="/" class="text-lg"
-          ><span class="font-bold text-slate-800">SAME DAY</span><span
-            class="text-slate-500">Appliance Repair</span
+          ><span class="font-bold text-slate-800" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">SAME DAY APPLIANCE REAPAIR</span><span
+            class="text-slate-500"></span
           >
         </a>
         <div class="block lg:hidden">
