--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -163,7 +163,7 @@ const makeTitle = title
       line-height:66px;
       font-weight:600;
       margin:0 auto 0 auto;}
-    .animate-charcter {
+    .animate-charcter {font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    text-transform: uppercase;
   background-image: linear-gradient(
     -225deg,
