--- a/src/pages/price-list/refrigerator-repair-cost.astro
+++ b/src/pages/price-list/refrigerator-repair-cost.astro
@@ -717,7 +717,7 @@ import "css/price/style_price.css";
 
             <div class="FAQ">
               <div class="fa">
-                <h3>What are the common signs that my oven needs repairs?</h3>
+                <h3>How Much Does Refrigerator Repair Cost on Average?</h3>
               </div>
 
               <div class="fa_plus">︾</div>
@@ -726,76 +726,13 @@ import "css/price/style_price.css";
             </div>
 
             <div class="questions">
-              <p>Common signs that your oven may need repairs include:</p>
-              <p><b>Uneven Heating</b></p>
-              <p>
-                If your oven consistently cooks food unevenly, leaving some
-                parts undercooked while others are overcooked, it could indicate
-                a problem with the heating elements or temperature regulation.
-              </p>
-
-              <p><b>Inaccurate Temperature</b></p>
-              <p>
-                If the oven temperature doesn't match the set temperature or
-                fluctuates during cooking, it could suggest issues with the
-                thermostat or temperature sensor.
-              </p>
-
-              <p><b>Failure to Heat</b></p>
-              <p>
-                If the oven fails to heat up at all, it may indicate a
-                malfunctioning heating element, gas oven igniter, or other
-                electrical components.
-              </p>
-
-              <p><b>Strange Smells</b></p>
-              <p>
-                Unusual odors emanating from the oven during cooking, such as a
-                gas smell in gas ovens, could signify a problem with the
-                igniter, gas valve, or other components. A burning smell could
-                indicate electrical problems, overheating components, or even
-                burning food trapped within the oven cavity.
-              </p>
-
-              <p><b>Unusual Noises</b></p>
-              <p>
-                Excessive noise, such as grinding, buzzing, or rattling, could
-                indicate issues with the fan motor, bearings, or other
-                mechanical components.
-              </p>
-
-              <p><b>Faulty Door Sealing</b></p>
-              <p>
-                If heat escapes from around the oven door, it may suggest a
-                worn-out door gasket, compromising energy efficiency and cooking
-                performance.
-              </p>
-
-              <p><b>Error Messages or Display Issues</b></p>
-              <p>
-                If the oven's control panel displays error messages, doesn't
-                respond to controls, or exhibits erratic behavior, it could
-                indicate a problem with the oven control board or wiring.
-              </p>
-
-              <p><b>Visible Damage</b></p>
-              <p>
-                Any visible damage to components like heating elements,
-                igniters, or wiring should prompt further inspection and
-                possible repair.
-              </p>
-              <p>
-                If you notice any of these signs, it's best to contact a
-                qualified appliance repair technician to diagnose the problem
-                and recommend a course of action. It's important to remember
-                that DIY oven repair might be dangerous and should only be
-                performed by a professional.
-              </p>
+              <p>The average refrigerator repair cost in Los Angeles is around $230-$235. However, more complex issues like compressor replacement can cost $400-$600. The total cost of a refrigerator repair can vary significantly depending on the specific issue and the brand and model of the refrigerator.</p>
+              
             </div>
 
             <div class="FAQ">
               <div class="fa">
-                <h3>What Oven Brands Do We Repair?</h3>
+                <h3>How Much Does a Mini Fridge Repair Cost?</h3>
               </div>
 
               <div class="fa_plus">︾</div>
@@ -804,14 +741,31 @@ import "css/price/style_price.css";
             </div>
 
             <div class="questions">
-              <p>We work with all major brands such as.</p>
+              <p>The cost to repair a compact refrigerator is akin to that of a standard one, typically ranging from $45 to $120 per hour for labor plus the expense of parts.</p>
               <p>
-                KitchenAid, Whirlpool, Frigidaire, LG, Samsung, GE, Maytag,
-                Bosch, Electrolux, Jenn-Air, Amana, Dacor, Wolf, Thermador,
-                Viking.
+                The total repair bill can vary widely, starting from as low as $50 for minor fixes like a faulty latch or hinge and going up to around $450 for more intricate problems.
               </p>
+              <p>Nevertheless, in most cases, replacing a compact refrigerator is more economically sound than paying for repairs, as the repair expenses can match those of a brand-new unit.</p>
+              <p>Common issues with compact refrigerators often revolve around the compressor, coils, and thermostat, which can incur costs ranging from $200 to $450 to rectify.</p>
+              <p>To sum up, the typical cost of repairing a mini fridge falls within the $50 to $450 range, depending on the specific issue, yet replacing the unit may be the preferable choice in many instances.</p>
             </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            
             <div class="FAQ">
               <div class="fa">
                 <h3>What Are Factors That Determine Oven Repair Costs?</h3>
