--- a/src/pages/price-list/oven-repair-cost.astro
+++ b/src/pages/price-list/oven-repair-cost.astro
@@ -38,6 +38,7 @@ import "css/price/style_price.css";
       <div class="two-col-grid">
         <div class="col-one">
           <img
+          loading="lazy"
             width="500px"
             height="500px"
             src="/img-price/oven-repair-cost/oven-repair-cost-1.webp"
@@ -91,6 +92,7 @@ import "css/price/style_price.css";
 
           <div class="head_pricing-policy_foto-b">
             <img
+            loading="lazy"
               width="500px"
               height="500px"
               src="/img-price/oven-repair-cost/oven-repair-cost-near-me-2.webp"
@@ -313,6 +315,7 @@ import "css/price/style_price.css";
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-b">
             <img
+            loading="lazy"
               width="600px"
               height="500px"
               src="/img-price/oven-repair-cost/electric-oven-repair-cost-3.webp"
@@ -564,6 +567,7 @@ import "css/price/style_price.css";
 
           <div class="head_pricing-policy_foto-b">
             <img
+            loading="lazy"
               width="600px"
               height="500px"
               src="/img-price/oven-repair-cost/oven-replacement-parts-cost-4.webp"
@@ -572,13 +576,6 @@ import "css/price/style_price.css";
           </div>
         </div>
 
-        <!-- <div class="head-prices">
-          <h2>Oven Replacement Parts Cost</h2>
-          <p>
-            The cost of replacement parts may vary depending on your model. Here
-            is an approximate range of prices:
-          </p>
-        </div> -->
 
         <div class="content_job-prices" id="col-prices">
           <div class="desk_job-prices">
@@ -768,6 +765,7 @@ import "css/price/style_price.css";
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-b">
             <img
+            loading="lazy"
               width="600px"
               height="500px"
               src="/img-price/oven-repair-cost/ways-to-save-money-on-oven-repair-5.webp"
