--- a/src/pages/price-list/refrigerator-repair-cost.astro
+++ b/src/pages/price-list/refrigerator-repair-cost.astro
@@ -35,6 +35,7 @@ import "css/price/style_price.css";
       <div class="two-col-grid">
         <div class="col-one">
           <img
+            loading="lazy"
             width="500px"
             height="500px"
             src="/img-price/refrigerator-repair-cost/refrigerator-repair-cost-1.webp"
@@ -92,6 +93,7 @@ import "css/price/style_price.css";
 
           <div class="head_pricing-policy_foto-b">
             <img
+            loading="lazy"
               width="500px"
               height="500px"
               src="/img-price/refrigerator-repair-cost/free-refrigerator-repair-estimates-2.webp"
@@ -320,6 +322,7 @@ import "css/price/style_price.css";
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-b">
             <img
+            loading="lazy"
               width="600px"
               height="500px"
               src="/img-price/refrigerator-repair-cost/refrigerator-repair-labor-cost-3.webp"
@@ -503,6 +506,7 @@ import "css/price/style_price.css";
 
           <div class="head_pricing-policy_foto-b">
             <img
+            loading="lazy"
               width="500px"
               height="500px"
               src="/img-price/refrigerator-repair-cost/refrigerator-repair-maintenance-cost-4.webp"
@@ -615,6 +619,7 @@ import "css/price/style_price.css";
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-b">
             <img
+            loading="lazy"
               width="600px"
               height="500px"
               src="/img-price/refrigerator-repair-cost/refrigerator-repair-cost-near-me-5.webp"
