--- a/src/pages/price-list/water-heater-repair-cost.astro
+++ b/src/pages/price-list/water-heater-repair-cost.astro
@@ -35,6 +35,7 @@ import "css/price/style_price.css";
       <div class="two-col-grid">
         <div class="col-one">
           <img
+          loading="lazy"
             width="500px"
             height="500px"
             src="/img-price/water-heater-repair-cost/water-heater-repair-1.webp"
